# Light

./: CMakeLists.txt  README.md  link.bat  start.bat
renderer/: CMakeLists.txt  asset_manager.cpp  asset_manager.h  engine.cpp  engine.h  log_system.cpp  log_system.h  opengl_rhi.cpp  opengl_rhi.h  render_pipeline.cpp  render_pipeline.h  render_type.h  renderer.cpp  renderer.h  rhi.h  sdf_renderer.cpp  sdf_renderer.h  shader.h  window_system.cpp  window_system.h
renderer/core/base/: macro.h
renderer/core/log/: log_system.cpp  log_system.h
renderer/core/math/: axis_aligned.cpp  axis_aligned.h  math.cpp  math.h  math_headers.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  quaternion.cpp  quaternion.h  random.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
renderer/framework/object/: object.cpp  object.h  object_id_allocator.h
renderer/global/: global_context.cpp  global_context.h
renderer/input/: input_system.cpp  input_system.h
renderer/render/: render_camera.cpp  render_camera.h  render_guid_allocator.h  render_resource_base.cpp  render_resource_base.h  render_resource_opengl.cpp  render_resource_opengl.h  render_scene.cpp  render_scene.h  render_system.cpp  render_system.h  render_type.h
renderer/render/pipelines/: render_pipeline_base.cpp  render_pipeline_base.h
renderer/render/rhi/: rhi.h
renderer/render/rhi/opengl/: opengl_rhi.cpp  opengl_rhi.h
resources/: Release
resources/sdf_shaders/: Charging_please_wait.fs  Raymarching_Primitives.fs  sdf.fs  sdf.vs
resources/shaders/: axis.fs  axis.vs  blinn_phong.fs  mesh.fs  mesh.vs  mesh_directional_light_shadow.fs  mesh_directional_light_shadow.vs  sdf.fs
resources/shaders/postprocessing/: gaussian_blur.fs  postprocessing.fs  postprocessing.vs
test/: CMakeLists.txt  main.cpp
test/sdf/: CMakeLists.txt  main.cpp
test/test/: CMakeLists.txt  main.cpp
